<resources>
    <string name="app_name">MapMAplication</string>
    <string name="ru_position">Pozycja GR</string>
    <string name="ld_position">Pozycja DR</string>

    <string name="ru_positionX">Wartość X góra</string>
    <string name="ru_positionY">Wartość Y góra</string>
    <string name="ru_positionF">Wartość \u03C8 góra</string>
    <string name="ru_positionL">Wartość \u03BB góra</string>


    <string name="ld_positionX">Wartość X dół</string>
    <string name="ld_positionY">Wartość Y dół</string>
    <string name="ld_positionF">Wartość \u03C8 dół</string>
    <string name="ld_positionL">Wartość \u03BB dół</string>

    <string name="btnSwitchXY">X, Y na \u03C8, \u03BB</string>
    <string name="btnSwitchFL">\u03C8, \u03BB na X, Y</string>

    <string name="aru_position">Współrzędne \n mapy</string>
    <string name="btnSend">Wyślij</string>
    <string name="mapaOpis">Mapa Pułtuska</string>

    <string name="btnBack">Pobierz \n miniaturę</string>
</resources>
