<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.edu.pg.eti.pwta.mapmaplication.MainActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:columnCount="7"
        android:orientation="horizontal"
        android:rowCount="5">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:ems="5"
            android:text="@string/ru_position"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="0" />

        <EditText
            android:id="@+id/setXup"
            android:layout_column="2"
            android:layout_row="0"
            android:ems="6"
            android:maxLength="8"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_column="3"
            android:layout_row="0" />

        <EditText
            android:id="@+id/setYup"
            android:layout_column="4"
            android:layout_row="0"
            android:ems="6"
            android:maxLength="8"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/positionXup"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="1"
            android:text="@string/ru_positionX"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/positionYup"
            android:layout_column="4"
            android:layout_gravity="center"
            android:layout_row="1"
            android:text="@string/ru_positionY"
            android:textSize="10sp" />

        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:ems="5"
            android:text="@string/ld_position"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="2" />

        <EditText
            android:id="@+id/setXdn"
            android:layout_column="2"
            android:layout_row="2"
            android:ems="6"
            android:maxLength="8"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_column="3"
            android:layout_row="2" />

        <EditText
            android:id="@+id/setYdn"
            android:layout_column="4"
            android:layout_row="2"
            android:ems="6"
            android:maxLength="8"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/positionXdn"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="3"
            android:text="@string/ld_positionX"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/positionYdn"
            android:layout_column="4"
            android:layout_gravity="center"
            android:layout_row="3"
            android:text="@string/ld_positionY"
            android:textSize="10sp" />

        <TextView
            android:layout_column="0"
            android:layout_row="4"
            android:paddingTop="10dp"
            android:text="@string/aru_position"
            android:textSize="12sp"
            android:gravity="center_horizontal|fill_vertical"
            />
        <TextView
            android:id="@+id/recived_pos"
            android:paddingTop="10dp"
            android:layout_column="2"
            android:layout_row="4"
            android:layout_columnSpan="5"
            android:textSize="12sp"
            android:text=""
            android:layout_gravity="bottom"
            />




        <Button
            android:id="@+id/btnSwitch"
            android:layout_column="5"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/btnSwitchXY"
            android:textSize="14sp" />
        <Button
            android:id="@+id/btnSend"
            android:layout_column="5"
            android:layout_row="2"
            android:layout_rowSpan="2"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical|fill_horizontal"
            android:text="@string/btnSend"
            android:textSize="14sp" />

    </GridLayout>

    <FrameLayout
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mapsView"
            android:adjustViewBounds="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/loading"
            android:contentDescription="@string/mapaOpis" />

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>

    </FrameLayout>


</LinearLayout>
